Use KWin to lower/raiser panel in windows can cover mode with edge activation

Use KWin to lower/raiser panel in windows can cover mode with edge
activation like autohide does.

This means if you have a maxmised menu you can still open the panel by
moving the mouse to the bottom of the screen

BUG: 343448